force-app/main/default/objects/Story__c/Story__c.object-meta.xml
<CustomObject>
    <label>Story</label>
    <nameField>
        <label>Story Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>