force-app/main/default/objects/Story__c/fields/Assigned_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Owner__c</fullName>
    <label>Assigned Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>