force-app/main/default/objects/Story__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field represent is the story is in blocked status.</description>
    <inlineHelpText>Boolean field represent is the story is in blocked status.</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>