force-app/main/default/objects/Story__c/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <description>This field stores the description given from business for every stories.</description>
    <label>Business Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>