force-app/main/default/objects/Story__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description / Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>