force-app/main/default/objects/Story__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature (Epic)</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Feature_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>