force-app/main/default/objects/Story__c/fields/Is_Global__c.field-meta.xml
<CustomField>
    <fullName>Is_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this story is shared across all projects and release note notifications go to all associated project stakeholders.</description>
    <label>Global Story</label>
    <type>Checkbox</type>
</CustomField>