force-app/main/default/objects/Story__c/fields/Origin_Project__c.field-meta.xml
<CustomField>
    <fullName>Origin_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Support_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>