force-app/main/default/objects/Story__c/fields/QA_Assignee__c.field-meta.xml
<CustomField>
    <fullName>QA_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>QA Stories</relationshipLabel>
    <relationshipName>QA_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>