force-app/main/default/objects/Story__c/fields/QA_Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>QA_Assignee_Name__c</fullName>
    <label>QA Assignee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>