force-app/main/default/objects/Story__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <description>Shows the user who created the story.</description>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>