force-app/main/default/objects/Story__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Requirement_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>