force-app/main/default/objects/Story__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>Sprint name or number (e.g. Sprint 1, PI 3.1). Applicable when project Methodology is Scrum or SAFe.</description>
    <label>Sprint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>