force-app/main/default/objects/Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <default>true</default>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Developed</fullName>
            </value>
            <value>
                <fullName>QA Approved</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>UAT Approved</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>