force-app/main/default/objects/Story__c/fields/Story_Type__c.field-meta.xml
<CustomField>
    <fullName>Story_Type__c</fullName>
    <label>Story Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Story</fullName>
                <default>true</default>
                <label>Story</label>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Spike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>