force-app/main/default/objects/Story__c/validationRules/Support_Story_Requires_Origin.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Story_Requires_Origin</fullName>
    <active>true</active>
    <description>Stories linked to a Technical Support project should reference an Origin Project for traceability.</description>
    <errorConditionFormula>AND(
            NOT(ISBLANK(Project__c)),
            ISPICKVAL(Project__r.Project_Type__c, &apos;Technical Support&apos;),
            ISBLANK(Origin_Project__c)
        )</errorConditionFormula>
    <errorMessage>Stories on a Technical Support project must reference an Origin Project for traceability back to the main project.</errorMessage>
</ValidationRule>